==> Indemsys/Mbed_led_blinky_MKE18F/mbed-os/targets/TARGET_MKE18F/api/serial_api.c <==
/* mbed Microcontroller Library
 * Copyright (c) 2006-2013 ARM Limited
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
#include "serial_api.h"

#if DEVICE_SERIAL

// math.h required for floating point operations for baud rate calculation
  #include <math.h>
  #include "mbed_assert.h"

  #include <string.h>

  #include "cmsis.h"
  #include "pinmap.h"
  #include "fsl_lpuart.h"
  #include "PeripheralPins.h"
  #include "fsl_clock_config.h"

  #define UART_CLOCK_FREQS    {    kCLOCK_ScgSysPllAsyncDiv2Clk, kCLOCK_ScgSysPllAsyncDiv2Clk, kCLOCK_ScgSysPllAsyncDiv2Clk  }

static uint32_t serial_irq_ids[FSL_FEATURE_SOC_UART_COUNT] = {0};
static uart_irq_handler irq_handler;

static LPUART_Type *const uart_addrs[] = LPUART_BASE_PTRS;      /* Array of UART peripheral base address. */

static clock_name_t const uart_clocks[] = UART_CLOCK_FREQS; /* Array of UART bus clock frequencies */


int stdio_uart_inited = 0;
serial_t stdio_uart;

/*-----------------------------------------------------------------------------------------------------
  
  
  \param obj  
  \param tx  
  \param rx  
-----------------------------------------------------------------------------------------------------*/
void serial_init(serial_t *obj, PinName tx, PinName rx)
{
  uint32_t uart_tx = pinmap_peripheral(tx, PinMap_UART_TX);
  uint32_t uart_rx = pinmap_peripheral(rx, PinMap_UART_RX);
  obj->index = pinmap_merge(uart_tx, uart_rx);
  MBED_ASSERT((int)obj->index != NC);

  lpuart_config_t config;

  LPUART_GetDefaultConfig(&config);
  config.baudRate_Bps = 9600;
  config.enableTx = false;
  config.enableRx = false;

  LPUART_Init(uart_addrs[obj->index],&config, CLOCK_GetFreq(uart_clocks[obj->index]));

  pinmap_pinout(tx, PinMap_UART_TX);
  pinmap_pinout(rx, PinMap_UART_RX);

  if (tx != NC)
  {
    LPUART_EnableTx(uart_addrs[obj->index], true);
    pin_mode(tx, PullUp);
  }
  if (rx != NC)
  {
    LPUART_EnableRx(uart_addrs[obj->index], true);
    pin_mode(rx, PullUp);
  }

  if (obj->index == STDIO_UART)
  {
    stdio_uart_inited = 1;
    memcpy(&stdio_uart, obj, sizeof(serial_t));
  }
}

/*-----------------------------------------------------------------------------------------------------
  
  
  \param obj  
-----------------------------------------------------------------------------------------------------*/
void serial_free(serial_t *obj)
{
  LPUART_Deinit(uart_addrs[obj->index]);
  serial_irq_ids[obj->index] = 0;
}

/*-----------------------------------------------------------------------------------------------------
  
  
  \param obj  
  \param baudrate  
-----------------------------------------------------------------------------------------------------*/
void serial_baud(serial_t *obj, int baudrate)
{
  LPUART_SetBaudRate(uart_addrs[obj->index], (uint32_t)baudrate, CLOCK_GetFreq(uart_clocks[obj->index]));
}

/*-----------------------------------------------------------------------------------------------------
  
  
  \param obj  
  \param data_bits  
  \param parity  
  \param stop_bits  
-----------------------------------------------------------------------------------------------------*/
void serial_format(serial_t *obj, int data_bits, SerialParity parity, int stop_bits)
{
  LPUART_Type *base = uart_addrs[obj->index];
  uint8_t temp;
  /* Set bit count and parity mode. */
  temp = base->CTRL & ~(LPUART_CTRL_PE_MASK | LPUART_CTRL_PT_MASK | LPUART_CTRL_M_MASK);
  if (parity != ParityNone)
  {
    /* Enable Parity */
    temp |=(LPUART_CTRL_PE_MASK | LPUART_CTRL_M_MASK);
    if (parity == ParityOdd)
    {
      temp |= LPUART_CTRL_PT_MASK;
    }
    else if (parity == ParityEven)
    {
      // PT=0 so nothing more to do
    }
    else
    {
      // Hardware does not support forced parity
      MBED_ASSERT(0);
    }
  }
  base->CTRL = temp;
  #if defined(FSL_FEATURE_UART_HAS_STOP_BIT_CONFIG_SUPPORT) && FSL_FEATURE_UART_HAS_STOP_BIT_CONFIG_SUPPORT
  /* Set stop bit per char */
  base->BDH =(base->BDH & ~UART_BDH_SBNS_MASK) | UART_BDH_SBNS((uint8_t)--stop_bits);
  #endif
}

/*-----------------------------------------------------------------------------------------------------
  
  
  \param transmit_empty  
  \param receive_full  
  \param index  
-----------------------------------------------------------------------------------------------------*/
static inline void uart_irq(uint32_t transmit_empty, uint32_t receive_full, uint32_t index)
{
  LPUART_Type *base = uart_addrs[index];

  /* If RX overrun. */
  if (LPUART_STAT_OR_MASK & base->STAT)
  {
    /* Read base->D, otherwise the RX does not work. */
    (void)base->DATA;
  }

  if (serial_irq_ids[index] != 0)
  {
    if (transmit_empty) irq_handler(serial_irq_ids[index], TxIrq);

    if (receive_full) irq_handler(serial_irq_ids[index], RxIrq);
  }
}

/*-----------------------------------------------------------------------------------------------------
  
  
  \param   
-----------------------------------------------------------------------------------------------------*/
void uart0_irq(void)
{
  uint32_t status_flags = LPUART0->STAT;
  uart_irq((status_flags & kLPUART_TxDataRegEmptyFlag),(status_flags & kLPUART_RxDataRegFullFlag), 0);
}

/*-----------------------------------------------------------------------------------------------------
  
  
  \param   
-----------------------------------------------------------------------------------------------------*/
void uart1_irq(void)
{
  uint32_t status_flags = LPUART1->STAT;
  uart_irq((status_flags & LPUART_STAT_TDRE_MASK),(status_flags & LPUART_STAT_RDRF_MASK), 1);
}

/*-----------------------------------------------------------------------------------------------------
  
  
  \param   
-----------------------------------------------------------------------------------------------------*/
void uart2_irq(void)
{
  uint32_t status_flags = LPUART2->STAT;
  uart_irq((status_flags & LPUART_STAT_TDRE_MASK),(status_flags & LPUART_STAT_RDRF_MASK), 2);
}

/*-----------------------------------------------------------------------------------------------------
  
  
  \param obj  
  \param handler  
  \param id  
-----------------------------------------------------------------------------------------------------*/
void serial_irq_handler(serial_t *obj, uart_irq_handler handler, uint32_t id)
{
  irq_handler = handler;
  serial_irq_ids[obj->index] = id;
}

/*-----------------------------------------------------------------------------------------------------
  
  
  \param obj  
  \param irq  
  \param enable  
-----------------------------------------------------------------------------------------------------*/
void serial_irq_set(serial_t *obj, SerialIrq irq, uint32_t enable)
{
  IRQn_Type uart_rx_irqs[] = LPUART_RX_IRQS;
  IRQn_Type uart_tx_irqs[] = LPUART_TX_IRQS;

  uint32_t vector = 0;

  switch (obj->index)
  {
  case 0:
    vector = (uint32_t)&uart0_irq;
    break;
  case 1:
    vector = (uint32_t)&uart1_irq;
    break;
  case 2:
    vector = (uint32_t)&uart2_irq;
    break;
  default:
    break;
  }

  if (enable)
  {
    switch (irq)
    {
    case RxIrq:
      LPUART_EnableInterrupts(uart_addrs[obj->index], kLPUART_RxDataRegFullInterruptEnable);
      break;
    case TxIrq:
      LPUART_EnableInterrupts(uart_addrs[obj->index], kLPUART_TxDataRegEmptyInterruptEnable);
      break;
    default:
      break;
    }
    NVIC_SetVector(uart_rx_irqs[obj->index], vector);
    NVIC_EnableIRQ(uart_rx_irqs[obj->index]);
    NVIC_SetVector(uart_tx_irqs[obj->index], vector);
    NVIC_EnableIRQ(uart_tx_irqs[obj->index]);

  }
  else // disable
  {
    int all_disabled = 0;
    SerialIrq other_irq =(irq == RxIrq)?(TxIrq):(RxIrq);
    switch (irq)
    {
    case RxIrq:
      LPUART_DisableInterrupts(uart_addrs[obj->index], kLPUART_RxDataRegFullInterruptEnable);
      break;
    case TxIrq:
      LPUART_DisableInterrupts(uart_addrs[obj->index], kLPUART_TxDataRegEmptyInterruptEnable);
      break;
    default:
      break;
    }
    switch (other_irq)
    {
    case RxIrq:
      all_disabled =((LPUART_GetEnabledInterrupts(uart_addrs[obj->index]) & kLPUART_RxDataRegFullInterruptEnable) == 0);
      break;
    case TxIrq:
      all_disabled =((LPUART_GetEnabledInterrupts(uart_addrs[obj->index]) & kLPUART_TxDataRegEmptyInterruptEnable) == 0);
      break;
    default:
      break;
    }
    if (all_disabled) 
    {
      NVIC_DisableIRQ(uart_rx_irqs[obj->index]);
      NVIC_DisableIRQ(uart_tx_irqs[obj->index]);
    }
  }
}

/*-----------------------------------------------------------------------------------------------------
  
  
  \param obj  
  
  \return int 
-----------------------------------------------------------------------------------------------------*/
int serial_getc(serial_t *obj)
{
  while (!serial_readable(obj));
  uint8_t data;
  data = LPUART_ReadByte(uart_addrs[obj->index]);

  return data;
}

/*-----------------------------------------------------------------------------------------------------
  
  
  \param obj  
  \param c  
-----------------------------------------------------------------------------------------------------*/
void serial_putc(serial_t *obj, int c)
{
  while (!serial_writable(obj));
  LPUART_WriteByte(uart_addrs[obj->index], (uint8_t)c);
}

/*-----------------------------------------------------------------------------------------------------
  
  
  \param obj  
  
  \return int 
-----------------------------------------------------------------------------------------------------*/
int serial_readable(serial_t *obj)
{
  uint32_t status_flags = LPUART_GetStatusFlags(uart_addrs[obj->index]);
  if (status_flags & kLPUART_RxOverrunFlag) LPUART_ClearStatusFlags(uart_addrs[obj->index], kLPUART_RxOverrunFlag);
  return (status_flags & kLPUART_RxDataRegFullFlag);
}

/*-----------------------------------------------------------------------------------------------------
  
  
  \param obj  
  
  \return int 
-----------------------------------------------------------------------------------------------------*/
int serial_writable(serial_t *obj)
{
  uint32_t status_flags = LPUART_GetStatusFlags(uart_addrs[obj->index]);
  if (status_flags & kLPUART_RxOverrunFlag) LPUART_ClearStatusFlags(uart_addrs[obj->index], kLPUART_RxOverrunFlag);
  return (status_flags & kLPUART_TxDataRegEmptyFlag);
}

/*-----------------------------------------------------------------------------------------------------
  
  
  \param obj  
-----------------------------------------------------------------------------------------------------*/
void serial_clear(serial_t *obj)
{
}

/*-----------------------------------------------------------------------------------------------------
  
  
  \param tx  
-----------------------------------------------------------------------------------------------------*/
void serial_pinout_tx(PinName tx)
{
  pinmap_pinout(tx, PinMap_UART_TX);
}

/*-----------------------------------------------------------------------------------------------------
  
  
  \param obj  
-----------------------------------------------------------------------------------------------------*/
void serial_break_set(serial_t *obj)
{
  uart_addrs[obj->index]->CTRL |= LPUART_CTRL_SBK_MASK;
}

/*-----------------------------------------------------------------------------------------------------
  
  
  \param obj  
-----------------------------------------------------------------------------------------------------*/
void serial_break_clear(serial_t *obj)
{
  uart_addrs[obj->index]->CTRL &= ~LPUART_CTRL_SBK_MASK;
}


/*-----------------------------------------------------------------------------------------------------
  
   Only hardware flow control is implemented in this API.
 
  \param obj  
  \param type  
  \param rxflow  
  \param txflow  
-----------------------------------------------------------------------------------------------------*/
void serial_set_flow_control(serial_t *obj, FlowControl type, PinName rxflow, PinName txflow)
{
  switch (type)
  {
  case FlowControlRTS:
    pinmap_pinout(rxflow, PinMap_UART_RTS);
    uart_addrs[obj->index]->MODIR &= ~LPUART_MODIR_TXCTSE_MASK;
    uart_addrs[obj->index]->MODIR |= LPUART_MODIR_RXRTSE_MASK;
    break;

  case FlowControlCTS:
    pinmap_pinout(txflow, PinMap_UART_CTS);
    uart_addrs[obj->index]->MODIR &= ~LPUART_MODIR_RXRTSE_MASK;
    uart_addrs[obj->index]->MODIR |= LPUART_MODIR_TXCTSE_MASK;
    break;

  case FlowControlRTSCTS:
    pinmap_pinout(rxflow, PinMap_UART_RTS);
    pinmap_pinout(txflow, PinMap_UART_CTS);
    uart_addrs[obj->index]->MODIR |= LPUART_MODIR_TXCTSE_MASK | LPUART_MODIR_RXRTSE_MASK;
    break;

  case FlowControlNone:
    uart_addrs[obj->index]->MODIR &= ~(LPUART_MODIR_TXCTSE_MASK | LPUART_MODIR_RXRTSE_MASK);
    break;

  default:
    break;
  }
}

#endif
